@@ -1,0 +1,4 @@
+
+CREATE TABLE sys_reaction (
+    external_import_configuration  varchar(255) default '' not null
+);
