@@ -1,3 +1,7 @@
+2024-05-23 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Improve compatibility with both TYPO3 11 and 12, resolves #298
+
 2024-03-12 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Ensure casting to boolean when checking nullable, resolves #319
